--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "mysql": "^2.18.1"
   },
@@ -7,7 +8,6 @@
   "version": "1.0.0",
   "description": "trabajoPractico",
   "main": "aplicacion.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
